# aya-kprobe-arg-example

./: Cargo.toml  Makefile  README.md
kprobes-args-test/: Cargo.toml
kprobes-args-test-common/: Cargo.toml
kprobes-args-test-ebpf/: Cargo.toml
kprobes-args-test-ebpf/src/: main.rs
kprobes-args-test/src/: main.rs
xtask/src/: build_ebpf.rs
